# godot-aircraft

./: .gitignore  CMakeLists.txt  README.md  SConstruct
.github/workflows/: build.yml
demo/: icon.svg.import  project.godot
demo/addons/aircraft/: aircraft.gdextension  aircraft.gdextension.uid  gdvehiclewing3d.gdextension
src/: register_types.cpp  register_types.h  vehicle_wing_3d.cpp  vehicle_wing_3d.h
